src/index.css
.App{
    background-image: url("https://cdn1.vectorstock.com/i/1000x1000/78/50/cinema-pattern-seamless-background-with-symbols-vector-22367850.jpg");
    background-size: contain;
    background-repeat: repeat;
}

/*App.js*/
.intro{
  background-color: aliceblue;
  text-align: center;
}

.appHeader {
  width: 8cm;
  height: 3cm;
  display: flex;
  justify-content: center;
  align-items: center;
} 

/*Login*/
.loginDetails{
  width: 50%;
  margin: auto;
  padding: 10px;
}

.userName{
  justify-content: center;
  align-items: center;
}

.loginTitle{
  background-color: whitesmoke;
  margin-bottom: 0cm;
} 

/*MovieProfile*/
.movieInfo{
  background-size: cover;
  color: aliceblue;
  background-color: black;
  display: grid;
  grid-template-columns: auto 1fr;
  margin-top: 1.5cm;
}

.movieInfo img {
  grid-column: 1;
  height: 10cm;
  width: 7.5cm;
}

.movieInfo .profileInfo {
  grid-column: 2;
}

.filmTitle{
  align-items: center;
}

.filmBio{
  text-align: center;
}

.homeButton{
  color: greenyellow;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 0.5cm;
}

.filmYear{
  display: flex;
  justify-content: center;
  align-items: center;
}

.filmLength{
  display: flex;
  justify-content: center;
  align-items: center;
}

.filmDirector{
  display: flex;
  justify-content: center;
  align-items: center;
}

.filmActors{
  display: flex;
  justify-content: center;
  align-items: center;
}

.filmGenre{
  display: flex;
  justify-content: center;
  align-items: center;
}

.movieInfo .profileInfo {
  grid-column: 2;
}

/*AddNewFilm*/
.newFilmTitle{
  background-color: aliceblue;
}

.newFilmDetails{
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(3, 23%);
  grid-auto-rows: auto;
  justify-content: center;
  align-items: center;
  background-color: orange;
  border-top: 0cm;
}

.titleBox{
  grid-row: 1;
  grid-column: 1;
  width: 5cm
}

.yearBox{
  grid-row: 1;
  grid-column: 2;
  width: 5cm;
}

.timeBox{
  grid-row: 1;
  grid-column: 3;
  width: 5cm;
}

.genreBox{
  grid-row: 2;
  grid-column: 1;
  width: 5cm;
}

.directorBox{
  grid-row: 2;
  grid-column: 2;
  width: 5cm
}

.actorBox{
  grid-row: 2;
  grid-column: 3;
  width: 5cm;
}

.plotBox{
  grid-row: 3;
  grid-column: 1;
  width: 5cm;
}

.posterBox{
  grid-row: 3;
  grid-column: 2;
  width: 5cm;
}

.faveBox{
  grid-row: 3;
  grid-column: 3;
  width: 5cm;
}

.addButton{
  width: 5cm;
  color: aliceblue;
  background-color: blueviolet;
}

